moved explorer folders to make easier to nanavigate

--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@
     <title>J|C | Art Portfolio</title>
     <link href="css/hover.css" rel="stylesheet" media="all">
     <script src="https://kit.fontawesome.com/fdd73ab055.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="artsyle.css">
+    <link rel="stylesheet" href="assets/css/artsyle.css">
 
 
 
