changed footer text , changed about me in nav bar link

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
         <nav>
             <div class="nav-container">
                 <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
+                <a href="about.html">About Me</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
             </div>
@@ -59,7 +59,7 @@
                 </a>
             </li>
         </ul>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
+        <p>&copy; 2024 Justin Case. All rights reserved.</p>
     </footer>
 
 </body>
