--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="nav-container">
                 <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
+                <a href="about.html">About Me</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
         </nav>
@@ -64,7 +64,7 @@
                 </a>
             </li>
         </ul>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
+        <p>&copy; 2024 Justin Case. All rights reserved.</p>
     </footer>
 
 </body>
