added media queries to alter all sizes for added user compatability

--- a/about.html
+++ b/about.html
@@ -27,6 +27,12 @@
         </nav>
     </header>
 
+    <div class="bio">
+            <div class="img">
+                <a src="assets/images/Justincase.jpg">Justin Case</a>
+            </div>
+    </div>
+
     
 
     <footer>
