--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,10 @@
                 position: relative;
                 right: 10px;
                 top: 19px;
+            #map {
+                position: relative;
+                right: 10px;
+                top: 19px;
             }
         </style>
     </header>
@@ -84,8 +88,12 @@
 
     </div>
 
-    <div id="map"><iframe width="680px" height="323px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England+(The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population mapping</a></iframe></div>
-
+    <div id="map">
+        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England+(The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+            <a href="https://www.maps.ie/population/">Population mapping</a>
+        </iframe>
+    </div>
 
 
 
