--- a/gallery.html
+++ b/gallery.html
@@ -38,34 +38,46 @@
                 transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the extraordinary
                 at work over at. J|C arthouse. Art is the language that connects us all.
             </p>
+        <div id="header-text">
+            <div class="header-container">
+                <div id="gallerytext">
+            <h1>The J|C collection</h1>
+            <p>Step into our world of artistry genius Justin charset, where every piece has a story to tell and emotions
+                come alive on canvas. Our carefully curated collection merges contemporary and classical, inviting both
+                seasoned art enthusiasts and casual admirers to explore the diverse tapestry of human expression.
+                Immerse
+                yourself in a journey of vibrant colors, intricate textures, and thought-provoking compositions that
+                transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the extraordinary
+                at work over at. J|C arthouse. Art is the language that connects us all.
+            </p>
         </div>
     </div>
 </div>
 
         <div id="media-gallerygrid">
             <div class="gallery">
-                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="">
+                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 1">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\assortment-colored-plant-leaves.jpg" alt="">
+                <img src="assets\Freepik\assortment-colored-plant-leaves.jpg" alt="Plant Leaves">
             </div>
             <div class="gallery">
-                <img src="assets/Freepik\background-textured-creamy-colorful-paint.jpg" alt="">
+                <img src="assets/Freepik\background-textured-creamy-colorful-paint.jpg" alt="Colorful Paint">
             </div>
             <div class="gallery">
-                <img src="assets/images/kool-kat.jpg" alt="">
+                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 2">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\astronaught.jpg" alt="">
+                <img src="assets\Freepik\astronaught.jpg" alt="Astronaut">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="">
+                <img src="assets\unsplash\javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="Unsplash Image 1">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="">
+                <img src="assets\unsplash\nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="Unsplash Image 2">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="">
+                <img src="assets\unsplash\alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="Unsplash Image 3">
             </div>
         </div>
     </div>
@@ -75,11 +87,13 @@
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
+                    aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
                     aria-label="Visit our Twitter page (opens in a new tab)">
                     <i class="fa-brands fa-twitter-square"></i>
                 </a>
@@ -87,11 +101,13 @@
             <li>
                 <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
                     aria-label="Visit our LinkedIn page (opens in a new tab)">
+                    aria-label="Visit our LinkedIn page (opens in a new tab)">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
                     aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
