--- a/about.html
+++ b/about.html
@@ -9,25 +9,7 @@
     <script src="https://kit.fontawesome.com/fdd73ab055.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/artsyle.css">
 
-    <style>
-    .about-me{
-        text-align:center;  
-    }
-    .paragraph{
-        width:500px;
-        font-size:19px;
-    }
-        .img {
-            position: relative;
-            width: 400px;
-            height: 350px;
-            top: -360px;
-            left: 400px;
-        }
-    </style>
-
 </head>
-
 
 <body>
     <header>
@@ -46,22 +28,22 @@
 
 
     <div class="about-me">
+        <div class="about-me-container">
+            <div class="h1">
         <h1>Justin Case</h1>
         <div class="paragraph">
         <p>
-            an imaginative and versatile artist, seamlessly blends various mediums to craft captivating visual narratives.
+           An imaginative and versatile artist, seamlessly blends various mediums to craft captivating visual narratives.
             With a keen eye for detail and a passion for pushing creative boundaries, Justin's work reflects a harmonious fusion of traditional and contemporary artistic elements.
             Through vibrant colors, intricate textures, and thought-provoking concepts, Justin Case invites viewers to embark on a visual journey that transcends conventional artistic norms.
             Whether exploring painting, sculpture, or digital art, Justin's creations resonate with a unique and compelling energy,
             leaving an indelible impression on those who experience the boundless world of Justin Case's artistic vision."
         </p>
     </div>
+</div>
         <img class="img"  src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="justin cause" >
-
     </div>
-
-    
-
+    </div>
     <footer>
         <ul class="social-networks">
             <li>
