renamed gallery images

--- a/gallery.html
+++ b/gallery.html
@@ -44,28 +44,28 @@
 
         <div id="media-gallerygrid">
             <div class="gallery">
-                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 1">
+                <img src="assets\images\torn-horizon.jpg" alt="Nature Image 1">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\assortment-colored-plant-leaves.jpg" alt="Plant Leaves">
+                <img src="assets\images\autumn-leaves.jpg" alt="Plant Leaves">
             </div>
             <div class="gallery">
-                <img src="assets/Freepik\background-textured-creamy-colorful-paint.jpg" alt="Colorful Paint">
+                <img src="assets/images\creamy.jpg" alt="Colorful Paint">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 2">
+                <img src="assets\images\kool-cat.jpg" alt="cat Image 2">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\astronaught.jpg" alt="Astronaut">
+                <img src="assets\images\astronaught.jpg" alt="Astronaut">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="Unsplash Image 1">
+                <img src="assets\images\atomic-girl.jpg" alt="atomic-girl  ">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="Unsplash Image 2">
+                <img src="assets\images\who-is-he.jpg" alt="Unsplash Image 2">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="Unsplash Image 3">
+                <img src="assets\images\who-is-she.jpg" alt="Unsplash Image 3">
             </div>
         </div>
     </div>
