--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,32 @@
             }
         </style>
     </header>
+  <div class="form-box">
+      <form action="#" method="post">
+          <div>
+              <label for=" first name">Name:</label>
+              <input type="text" id="name" name="name" required>
+          </div>
+          <div>
+              <label for="last name">last name</label>
+              <input type="text" name="lastname" required >
+          </div>
+          <div>
+              <label for="contactnumber">contact number</label>
+              <input type="number" name="number" >
+          </div>
+          <div>
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required>
+          </div>
+          <div>   
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
 
+          <button type="submit">Submit</button>
+  </div>
+  </form>
+  </div>        
 
     <table class="text-center">
         <tr>
@@ -59,12 +84,8 @@
 
     </div>
 
-    <div id="map">
-        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England+(The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
-            <a href="https://www.maps.ie/population/">Population mapping</a>
-        </iframe>
-    </div>
+    <div id="map"><iframe width="680px" height="323px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England+(The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population mapping</a></iframe></div>
+
 
 
 
