applied gallery photo update

--- a/gallery.html
+++ b/gallery.html
@@ -44,28 +44,28 @@
 
         <div id="media-gallerygrid">
             <div class="gallery">
-                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 1">
+                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\assortment-colored-plant-leaves.jpg" alt="Plant Leaves">
+                <img src="assets\Freepik\assortment-colored-plant-leaves.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets/Freepik\background-textured-creamy-colorful-paint.jpg" alt="Colorful Paint">
+                <img src="assets/Freepik\background-textured-creamy-colorful-paint.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 2">
+                <img src="assets/images/kool-kat.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\astronaught.jpg" alt="Astronaut">
+                <img src="assets\Freepik\astronaught.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="Unsplash Image 1">
+                <img src="assets\unsplash\javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="Unsplash Image 2">
+                <img src="assets\unsplash\nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="Unsplash Image 3">
+                <img src="assets\unsplash\alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="">
             </div>
         </div>
     </div>
