styled html in abut and gallery for html verification

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                 resonate with a unique and compelling energy, leaving an indelible impression on those who experience the
                 boundless world of Justin Case's artistic vision.
             </p>
-            <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="Justin Case">
+            <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
         </div>
     </div>
 </div>
