--- a/gallery.html
+++ b/gallery.html
@@ -38,46 +38,34 @@
                 transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the extraordinary
                 at work over at. J|C arthouse. Art is the language that connects us all.
             </p>
-        <div id="header-text">
-            <div class="header-container">
-                <div id="gallerytext">
-            <h1>The J|C collection</h1>
-            <p>Step into our world of artistry genius Justin charset, where every piece has a story to tell and emotions
-                come alive on canvas. Our carefully curated collection merges contemporary and classical, inviting both
-                seasoned art enthusiasts and casual admirers to explore the diverse tapestry of human expression.
-                Immerse
-                yourself in a journey of vibrant colors, intricate textures, and thought-provoking compositions that
-                transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the extraordinary
-                at work over at. J|C arthouse. Art is the language that connects us all.
-            </p>
         </div>
     </div>
 </div>
 
         <div id="media-gallerygrid">
             <div class="gallery">
-                <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 1">
+                <img src="assets/Freepik/nature-image-torn-paper-style.jpg" alt="nature-image-torn-paper-style">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\assortment-colored-plant-leaves.jpg" alt="Plant Leaves">
+                <img src="assets/Freepik/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
             </div>
             <div class="gallery">
-                <img src="assets/Freepik\background-textured-creamy-colorful-paint.jpg" alt="Colorful Paint">
+                <img src="assets/Freepik/background-textured-creamy-colorful-paint.jpg" alt="background-textured-creamy-colorful-paint">
             </div>
             <div class="gallery">
                 <img src="assets\Freepik\nature-image-torn-paper-style.jpg" alt="Nature Image 2">
             </div>
             <div class="gallery">
-                <img src="assets\Freepik\astronaught.jpg" alt="Astronaut">
+                <img src="assets/Freepik/astronaught.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="Unsplash Image 1">
+                <img src="assets/unsplash/javier-miranda-0Iuutf928Rk-unsplash(1).jpg" alt="javier-miranda-0Iuutf928Rk-unsplash">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="Unsplash Image 2">
+                <img src="assets/unsplash/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="nick-andreka-WWQzZO6kORA-unsplash">
             </div>
             <div class="gallery">
-                <img src="assets\unsplash\alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="Unsplash Image 3">
+                <img src="assets/unsplash/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
             </div>
         </div>
     </div>
