--- a/about.html
+++ b/about.html
@@ -45,6 +45,24 @@
         </nav>
     </header>
 
+
+    <div class="about-me">
+        <div class="about-me-container">
+            <div class="h1">
+        <h1>Justin Case</h1>
+        <div class="paragraph">
+        <p>
+           An imaginative and versatile artist, seamlessly blends various mediums to craft captivating visual narratives.
+            With a keen eye for detail and a passion for pushing creative boundaries, Justin's work reflects a harmonious fusion of traditional and contemporary artistic elements.
+            Through vibrant colors, intricate textures, and thought-provoking concepts, Justin Case invites viewers to embark on a visual journey that transcends conventional artistic norms.
+            Whether exploring painting, sculpture, or digital art, Justin's creations resonate with a unique and compelling energy,
+            leaving an indelible impression on those who experience the boundless world of Justin Case's artistic vision."
+        </p>
+    </div>
+</div>
+        <img class="img"  src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="justin cause" >
+    </div>
+    </div>
     
   
 <div id="header-text">
@@ -60,7 +78,7 @@
                 resonate with a unique and compelling energy, leaving an indelible impression on those who experience the
                 boundless world of Justin Case's artistic vision.
             </p>
-            <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="Justin Case">
+            <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
         </div>
     </div>
 </div>
