tidyed css file removing merges and updating pages for html validation

--- a/gallery.html
+++ b/gallery.html
@@ -27,31 +27,36 @@
 
     <div>
         <div id="header-text">
-            <div class="header-container">
-                <div id="gallerytext">
-            <h1>The J|C collection</h1>
-            <p>Step into our world of artistry genius Justin charset, where every piece has a story to tell and emotions
-                come alive on canvas. Our carefully curated collection merges contemporary and classical, inviting both
-                seasoned art enthusiasts and casual admirers to explore the diverse tapestry of human expression.
-                Immerse
-                yourself in a journey of vibrant colors, intricate textures, and thought-provoking compositions that
-                transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the extraordinary
-                at work over at. J|C arthouse. Art is the language that connects us all.
-            </p>
+            <div class="gallery-container">
+                <div id="gallery-text">
+                    <h1 class="h1">The J|C collection</h1>
+                    <p>Step into our world of artistry genius Justin charset, where every piece has a story to tell and
+                        emotions
+                        come alive on canvas. Our carefully curated collection merges contemporary and classical,
+                        inviting both
+                        seasoned art enthusiasts and casual admirers to explore the diverse tapestry of human
+                        expression.
+                        Immerse
+                        yourself in a journey of vibrant colors, intricate textures, and thought-provoking compositions
+                        that
+                        transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the
+                        extraordinary
+                        at work over at. J|C arthouse. Art is the language that connects us all.
+                    </p>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
 
         <div id="media-gallerygrid">
-            <div class="gallery"><img src="assets/Freepik/nature-image-torn-paper-style.jpg" alt="nature-image-torn-paper-style"></div>
-            
-          <div class="gallery">
-                <img src="assets/Freepik/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
-            </div>
+            <div class="gallery"><img src="assets/Freepik/nature-image-torn-paper-style.jpg"
+                    alt="nature-image-torn-paper-style"></div>
+
+
             <div class="gallery">
-                <img src="assets/Freepik/background-textured-creamy-colorful-paint.jpg" alt="background-textured-creamy-colorful-paint">
-          </div>
-  
+                <img src="assets/Freepik/background-textured-creamy-colorful-paint.jpg"
+                    alt="background-textured-creamy-colorful-paint">
+            </div>
+
             <div class="gallery">
                 <img src="assets/Freepik/assortment-colored-plant-leaves.jpg" alt="">
             </div>
@@ -63,10 +68,8 @@
             <div class="gallery"><img src="assets/Freepik/astronaught.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets/unsplash/javier-miranda-0Iuutf928Rk-unsplash(1).jpg" alt="javier-miranda-0Iuutf928Rk-unsplash">
-            </div>
-            <div class="gallery">
-                <img src="assets/unsplash/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="nick-andreka-WWQzZO6kORA-unsplash">
+                <img src="assets/unsplash/nick-andreka-WWQzZO6kORA-unsplash.jpg"
+                    alt="nick-andreka-WWQzZO6kORA-unsplash">
             </div>
             <div class="gallery">
                 <img src="assets/unsplash/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
@@ -76,38 +79,36 @@
     </div>
 
     <footer>
-        <ul class="social-networks">
-            <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)">
-                    aria-label="Visit our Facebook page (opens in a new tab)">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)">
-                    aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-twitter-square"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our LinkedIn page (opens in a new tab)">
-                    aria-label="Visit our LinkedIn page (opens in a new tab)">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)">
-                    aria-label="Visit our Instagram page (opens in a new tab)">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            </li>
-        </ul>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
-    </footer>
+        <footer class="footer">
+            <footer class="footer">
+                <ul class="social-networks">
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Twitter page (opens in a new tab)">
+                            <i class="fa-brands fa-twitter-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our LinkedIn page (opens in a new tab)">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram page (opens in a new tab)">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+                <p>&copy; 2024 Your Company. All rights reserved.</p>
+            </footer>
 
 </body>
 
