--- a/contact.html
+++ b/contact.html
@@ -30,39 +30,35 @@
                 position: relative;
                 right: 10px;
                 top: 19px;
-            #map {
-                position: relative;
-                right: 10px;
-                top: 19px;
             }
         </style>
     </header>
-  <div class="form-box">
-      <form action="#" method="post">
-          <div>
-              <label for=" first name">Name:</label>
-              <input type="text" id="name" name="name" required>
-          </div>
-          <div>
-              <label for="last name">last name</label>
-              <input type="text" name="lastname" required >
-          </div>
-          <div>
-              <label for="contactnumber">contact number</label>
-              <input type="number" name="number" >
-          </div>
-          <div>
-              <label for="email">Email:</label>
-              <input type="email" id="email" name="email" required>
-          </div>
-          <div>   
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="4" required></textarea>
+    <div class="form-box">
+        <form action="#" method="post">
+            <div>
+                <label for=" first name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div>
+                <label for="last name">last name</label>
+                <input type="text" name="lastname" required>
+            </div>
+            <div>
+                <label for="contactnumber">contact number</label>
+                <input type="number" name="number">
+            </div>
+            <div>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
 
-          <button type="submit">Submit</button>
-  </div>
-  </form>
-  </div>        
+                <button type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
 
     <table class="text-center">
         <tr>
@@ -98,34 +94,36 @@
 
 
     <footer>
-        <ul class="social-networks">
-            <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-twitter-square"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our LinkedIn page (opens in a new tab)">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            </li>
-        </ul>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
-    </footer>
+        <footer class="footer">
+            <footer class="footer">
+                <ul class="social-networks">
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Facebook page (opens in a new tab)">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Twitter page (opens in a new tab)">
+                            <i class="fa-brands fa-twitter-square"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our LinkedIn page (opens in a new tab)">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                            aria-label="Visit our Instagram page (opens in a new tab)">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+                <p>&copy; 2024 Your Company. All rights reserved.</p>
+            </footer>
 
 </body>
 
