--- a/about.html
+++ b/about.html
@@ -29,55 +29,59 @@
         <div class="header-container">
             <div id="gallerytext">
                 <h1 class="about-me-h1">Justin Case</h1>
-                <div class="about-p"><p>
-                    An imaginative and versatile artist, seamlessly blends various mediums to craft captivating visual
-                    narratives.
-                    With a keen eye for detail and a passion for pushing creative boundaries, Justin's work reflects a
-                    harmonious
-                    fusion of traditional and contemporary artistic elements. Through vibrant colors, intricate
-                    textures, and
-                    thought-provoking concepts, Justin Case invites viewers to embark on a visual journey that
-                    transcends
-                    conventional artistic norms. Whether exploring painting, sculpture, or digital art, Justin's
-                    creations
-                    resonate with a unique and compelling energy, leaving an indelible impression on those who
-                    experience the
-                    boundless world of Justin Case's artistic vision.
-                </p>
-                <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
+                <div class="about-p">
+                    <p>
+                        An imaginative and versatile artist, seamlessly blends various mediums to craft captivating
+                        visual
+                        narratives.
+                        With a keen eye for detail and a passion for pushing creative boundaries, Justin's work reflects
+                        a
+                        harmonious
+                        fusion of traditional and contemporary artistic elements. Through vibrant colors, intricate
+                        textures, and
+                        thought-provoking concepts, Justin Case invites viewers to embark on a visual journey that
+                        transcends
+                        conventional artistic norms. Whether exploring painting, sculpture, or digital art, Justin's
+                        creations
+                        resonate with a unique and compelling energy, leaving an indelible impression on those who
+                        experience the
+                        boundless world of Justin Case's artistic vision.
+                    </p>
+                    <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
-    <footer>
+
         <footer class="footer">
-                <ul class="social-networks">
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our Facebook page (opens in a new tab)">
-                            <i class="fa-brands fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our Twitter page (opens in a new tab)">
-                            <i class="fa-brands fa-twitter-square"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our LinkedIn page (opens in a new tab)">
-                            <i class="fa-brands fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our Instagram page (opens in a new tab)">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                    </li>
-                </ul>
-                <p>&copy; 2024 Your Company. All rights reserved.</p>
-            </footer>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook page (opens in a new tab)">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Twitter page (opens in a new tab)">
+                        <i class="fa-brands fa-twitter-square"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our LinkedIn page (opens in a new tab)">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram page (opens in a new tab)">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+            <p>&copy; 2024 Your Company. All rights reserved.</p>
+        </footer>
 </body>
 
 </html>
