--- a/contact.html
+++ b/contact.html
@@ -27,19 +27,20 @@
         </nav>
 
     </header>
-    <div class="form-box">
-        <form action="#" method="post">
+    <div class="content-container">
+        <div class="form-box">
+            <form action="#" method="post">
             <div>
-                <label for=" first name">Name:</label>
-                <input type="text" id="name" name="name" required>
+                <label for="firstname"> First Name:</label>
+                <input type="text" id="firstname" name="name" required>
             </div>
             <div>
-                <label for="last name">last name</label>
-                <input type="text" name="lastname" required>
+                <label for="lastname">last name:</label>
+                <input type="text" id="lastname" name="lastname" required>
             </div>
             <div>
-                <label for="contactnumber">contact number</label>
-                <input type="number" name="number">
+                <label for="contactnumber">contact number:</label>
+                <input type="number" id="contactnumber" name="number">
             </div>
             <div>
                 <label for="email">Email:</label>
@@ -53,98 +54,34 @@
             </div>
         </form>
   </div>
-
-    <table class="text-center">
-        <tr>
-            <th></th>
-            <th>Open</th>
-            <th>Close</th>
-        </tr>
-        <tr>
-            <td>open 7 days a week</td>
-            <td>04:00pm</td>
-            <td>10:00pm</td>
-        </tr>
-
-    </table>
-
-    <div class="text-right contact-box-right">
-        <h3>Get in touch</h3>
-
-        <div>
-            <span class="bold">Phone: </span>
-            <span> 012454 12451</span>
-        </div>
-
-    </div>
-
-    <div id="map"><iframe width="680px" height="323px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England+(The%20Grosvenor%20Museum%20Museum%20in%20Chester,%20England)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.maps.ie/population/">Population mapping</a></iframe></div>
-
-
-
-    <footer>
-
-        <footer class="footer">
-            <footer class="footer">
-                <ul class="social-networks">
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our Facebook page (opens in a new tab)">
-                            <i class="fa-brands fa-facebook"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our Twitter page (opens in a new tab)">
-                            <i class="fa-brands fa-twitter-square"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our LinkedIn page (opens in a new tab)">
-                            <i class="fa-brands fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                            aria-label="Visit our Instagram page (opens in a new tab)">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                    </li>
-                </ul>
-                <p>&copy; 2024 Your Company. All rights reserved.</p>
-            </footer>
-
-        <ul class="social-networks">
-            <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                   aria-label="Visit our Facebook page (opens in a new tab)">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                   aria-label="Visit our Twitter page (opens in a new tab)">
-                    <i class="fa-brands fa-twitter-square"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                   aria-label="Visit our LinkedIn page (opens in a new tab)">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                   aria-label="Visit our Instagram page (opens in a new tab)">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            </li>
-        </ul>
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
-    </footer>
-
-
+<footer class="footer">
+    <ul class="social-networks">
+        <li>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opens in a new tab)">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)">
+                <i class="fa-brands fa-twitter-square"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+                aria-label="Visit our LinkedIn page (opens in a new tab)">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (opens in a new tab)">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+        </li>
+    </ul>
+    <p>&copy; 2024 Your Company. All rights reserved.</p>
+</footer>
 </body>
-
 </html>
