added alt text and altered the duplicate image

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                         experience the
                         boundless world of Justin Case's artistic vision.
                     </p>
-                    <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="">
+                    <img class="img2" src="assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg" alt="Justin-case">
                 </div>
             </div>
         </div>
