--- a/gallery.html
+++ b/gallery.html
@@ -48,31 +48,31 @@
         </div>
 
         <div id="media-gallerygrid">
-            <div class="gallery"><img src="assets/Freepik/nature-image-torn-paper-style.jpg"
+            <div class="gallery"><img src="assets/images/nature-image-torn-paper-style.jpg"
                     alt="nature-image-torn-paper-style"></div>
 
 
             <div class="gallery">
-                <img src="assets/Freepik/background-textured-creamy-colorful-paint.jpg"
+                <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="creamy-colorful-paint"
                     alt="background-textured-creamy-colorful-paint">
             </div>
 
             <div class="gallery">
-                <img src="assets/Freepik/assortment-colored-plant-leaves.jpg" alt="">
+                <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="assortment-of-leaves">
             </div>
             <div class="gallery">
-                <img src="assets/Freepik/background-textured-creamy-colorful-paint.jpg" alt="">
+                <img src="assets/images/javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="space-woman">
             </div>
-            <div class="gallery"><img src="assets/images/kool-kat.jpg" alt="">
+            <div class="gallery"><img src="assets/images/kool-kat.jpg" alt="kool-kat">
             </div>
-            <div class="gallery"><img src="assets/Freepik/astronaught.jpg" alt="">
-            </div>
-            <div class="gallery">
-                <img src="assets/unsplash/nick-andreka-WWQzZO6kORA-unsplash.jpg"
-                    alt="nick-andreka-WWQzZO6kORA-unsplash">
+            <div class="gallery"><img src="assets/images/astronaught.jpg" alt="astronaught">
             </div>
             <div class="gallery">
-                <img src="assets/unsplash/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
+                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg"
+                    alt="nick-andreka-WWQzZO6kORA-unsplash" alt="nick-andreka">
+            </div>
+            <div class="gallery">
+                <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper">
 
             </div>
         </div>
