edited some text and spelling errors

--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
             <div class="gallery-container">
                 <div id="gallery-text">
                     <h1 class="h1">The J|C collection</h1>
-                    <p>Step into our world of artistry genius Justin charset, where every piece has a story to tell and
+                    <p>Step into our world of artistry genius Justin Case, where every piece has a story to tell and
                         emotions
                         come alive on canvas. Our carefully curated collection merges contemporary and classical,
                         inviting both
@@ -68,8 +68,8 @@
             <div class="gallery"><img src="assets/images/astronaught.jpg" alt="astronaught">
             </div>
             <div class="gallery">
-                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg"
-                    alt="nick-andreka-WWQzZO6kORA-unsplash" alt="nick-andreka">
+                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="nick-andreka-WWQzZO6kORA-unsplash"
+                    alt="nick-andreka">
             </div>
             <div class="gallery">
                 <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper">
