added text and description to form

--- a/contact.html
+++ b/contact.html
@@ -28,60 +28,66 @@
 
     </header>
     <div class="content-container">
+        <header>
+            <h1>Contact Me Here</h1>
+        </header>
+        <p>For purchase enquiries or exhibition dates please get in touch></p>
         <div class="form-box">
             <form action="#" method="post">
-            <div>
-                <label for="firstname"> First Name:</label>
-                <input type="text" id="firstname" name="name" required>
-            </div>
-            <div>
-                <label for="lastname">last name:</label>
-                <input type="text" id="lastname" name="lastname" required>
-            </div>
-            <div>
-                <label for="contactnumber">contact number:</label>
-                <input type="number" id="contactnumber" name="number">
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
+                <div>
+                    <label for="firstname"> First Name:</label>
+                    <input type="text" id="firstname" name="name" required>
+                </div>
+                <div>
+                    <label for="lastname">last name:</label>
+                    <input type="text" id="lastname" name="lastname" required>
+                </div>
+                <div>
+                    <label for="contactnumber">contact number:</label>
+                    <input type="number" id="contactnumber" name="number">
+                </div>
+                <div>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div>
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
 
-                <button type="submit">Submit</button>
-            </div>
-        </form>
-  </div>
-<footer class="footer">
-    <ul class="social-networks">
-        <li>
-            <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Facebook page (opens in a new tab)">
-                <i class="fa-brands fa-facebook"></i>
-            </a>
-        </li>
-        <li>
-            <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter page (opens in a new tab)">
-                <i class="fa-brands fa-twitter-square"></i>
-            </a>
-        </li>
-        <li>
-            <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                aria-label="Visit our LinkedIn page (opens in a new tab)">
-                <i class="fa-brands fa-linkedin"></i>
-            </a>
-        </li>
-        <li>
-            <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram page (opens in a new tab)">
-                <i class="fa-brands fa-instagram"></i>
-            </a>
-        </li>
-    </ul>
-    <p>&copy; 2024 Your Company. All rights reserved.</p>
-</footer>
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <footer class="footer">
+        <ul class="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">
+                    <i class="fa-brands fa-twitter-square"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our LinkedIn page (opens in a new tab)">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+        <p>&copy; 2024 Your Company. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
