added contact details needs mobile UX

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
 
 </head>
 
-
 <body>
     <header>
         <div class="logo">
@@ -25,13 +24,13 @@
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
-
     </header>
+
     <div class="content-container">
         <header>
             <h1>Contact Me Here</h1>
         </header>
-        <p>For purchase enquiries or exhibition dates please get in touch></p>
+        <p>For purchase enquiries or exhibition dates please get in touch.</p>
         <div class="form-box">
             <form action="#" method="post">
                 <div>
@@ -53,13 +52,13 @@
                 <div>
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="4" required></textarea>
-
                     <button type="submit">Submit</button>
                 </div>
             </form>
         </div>
     </div>
     <footer class="footer">
+        <div class="contact-footer">
         <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
@@ -87,6 +86,7 @@
             </li>
         </ul>
         <p>&copy; 2024 Your Company. All rights reserved.</p>
+    </div>
     </footer>
 </body>
 
