--- a/gallery.html
+++ b/gallery.html
@@ -53,8 +53,9 @@
 
 
             <div class="gallery">
-                <img src="assets/images/background-textured-creamy-colorful-paint.jpg" alt="creamy-colorful-paint"
+                <img src="assets/images/background-textured-creamy-colorful-paint.jpg"
                     alt="background-textured-creamy-colorful-paint">
+                    
             </div>
 
             <div class="gallery">
@@ -78,8 +79,8 @@
         </div>
     </div>
 
-
     <footer class="footer">
+        <div class="gallery.footer">
         <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
@@ -107,6 +108,7 @@
             </li>
         </ul>
         <p>&copy; 2024 Your Company. All rights reserved.</p>
+    </div>
     </footer>
 
 </body>
