--- a/gallery.html
+++ b/gallery.html
@@ -27,20 +27,16 @@
 
     <div>
         <div id="header-text">
-            <div class="gallery-container">
-                <div id="gallery-text">
-                    <h1 class="h1">The J|C collection</h1>
-                    <p>Step into our world of artistry genius Justin Case, where every piece has a story to tell and
-                        emotions
-                        come alive on canvas. Our carefully curated collection merges contemporary and classical,
-                        inviting both
-                        seasoned art enthusiasts and casual admirers to explore the diverse tapestry of human
-                        expression.
+            <div class="header-container">
+                <div id="gallerytext">
+                    <h1>The J|C collection</h1>
+                    <p>
+                        Step into our world of artistry genius Justin charset, where every piece has a story to tell and emotions
+                        come alive on canvas. Our carefully curated collection merges contemporary and classical, inviting both
+                        seasoned art enthusiasts and casual admirers to explore the diverse tapestry of human expression.
                         Immerse
-                        yourself in a journey of vibrant colors, intricate textures, and thought-provoking compositions
-                        that
-                        transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the
-                        extraordinary
+                        yourself in a journey of vibrant colors, intricate textures, and thought-provoking compositions that
+                        transcend the ordinary. Let the strokes speak to your soul, and join us in celebrating the extraordinary
                         at work over at. J|C arthouse. Art is the language that connects us all.
                     </p>
                 </div>
@@ -48,68 +44,67 @@
         </div>
 
         <div id="media-gallerygrid">
-            <div class="gallery"><img src="assets/images/nature-image-torn-paper-style.jpg"
-                    alt="nature-image-torn-paper-style"></div>
-
+            <div class="gallery"><img src="assets/Freepik/nature-image-torn-paper-style.jpg" alt="nature-image-torn-paper-style"></div>
 
             <div class="gallery">
-                <img src="assets/images/background-textured-creamy-colorful-paint.jpg"
-                    alt="background-textured-creamy-colorful-paint">
-                    
+                <img src="assets/Freepik/assortment-colored-plant-leaves.jpg" alt="assortment-colored-plant-leaves">
+            </div>
+            <div class="gallery">
+                <img src="assets/Freepik/background-textured-creamy-colorful-paint.jpg" alt="background-textured-creamy-colorful-paint">
             </div>
 
             <div class="gallery">
-                <img src="assets/images/assortment-colored-plant-leaves.jpg" alt="assortment-of-leaves">
+                <img src="assets/Freepik/assortment-colored-plant-leaves.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets/images/javier-miranda-0Iuutf928Rk-unsplash (1).jpg" alt="space-woman">
-            </div>
-            <div class="gallery"><img src="assets/images/kool-kat.jpg" alt="kool-kat">
-            </div>
-            <div class="gallery"><img src="assets/images/astronaught.jpg" alt="astronaught">
+                <img src="assets/Freepik/background-textured-creamy-colorful-paint.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets/images/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="nick-andreka-WWQzZO6kORA-unsplash"
-                    alt="nick-andreka">
+                <img src="assets/images/kool-kat.jpg" alt="">
             </div>
             <div class="gallery">
-                <img src="assets/images/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper">
+                <img src="assets/Freepik/astronaught.jpg" alt="">
+            </div>
+            <div class="gallery">
+                <img src="assets/unsplash/javier-miranda-0Iuutf928Rk-unsplash(1).jpg" alt="javier-miranda-0Iuutf928Rk-unsplash">
+            </div>
+            <div class="gallery">
+                <img src="assets/unsplash/nick-andreka-WWQzZO6kORA-unsplash.jpg" alt="nick-andreka-WWQzZO6kORA-unsplash">
+            </div>
+            <div class="gallery">
+                <img src="assets/unsplash/alex-shuper-EfWH_IxDgLE-unsplash.jpg" alt="alex-shuper-EfWH_IxDgLE-unsplash">
 
             </div>
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="gallery.footer">
+
+    <footer>
         <ul class="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)">
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)">
                     <i class="fa-brands fa-twitter-square"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our LinkedIn page (opens in a new tab)">
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Visit our LinkedIn page (opens in a new tab)">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
         </ul>
         <p>&copy; 2024 Your Company. All rights reserved.</p>
-    </div>
     </footer>
+
 
 </body>
 
