--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/hover.css" rel="stylesheet" media="all">
     <script src="https://kit.fontawesome.com/fdd73ab055.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/artsyle.css">
+
 </head>
 
 <body>
@@ -21,47 +22,48 @@
                 <a href="about.html">About Us</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
-            </div>
+                </div>
         </nav>
     </header>
 
     <section class="hero">
+
+        <!-- Clickable image with text overlay -->
         <div class="text-overlay">
             <h2>Artistic Freedom by Justin Case</h2>
             <p>Discover amazing features right here.</p>
             <a href="contact.html" class="cta-button">Contact Me</a>
         </div>
+
     </section>
 
-    <footer class="footer">
+
+    <footer>
         <ul class="social-networks">
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)">
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page (opens in a new tab)">
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)">
                     <i class="fa-brands fa-twitter-square"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our LinkedIn page (opens in a new tab)">
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="Visit our LinkedIn page (opens in a new tab)">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             </li>
         </ul>
         <p>&copy; 2024 Your Company. All rights reserved.</p>
     </footer>
+
 </body>
 
 </html>
